frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vue-deployment
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: vue
  template:
    metadata:
      labels:
        app: vue
    spec:
      containers:
      - name: vue-app
        image: aksaz01devvvd01registry.azurecr.io/hurivono/joohan_vue_crud_security:241028_02
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
