frontend/fe_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vue-svc
  labels: # service monitor 의 selector 를 위하여 생성
    app: vue
spec:
  ports:
  - port: 8083
    nodePort: 30002
    targetPort: 8080
    name: http
  selector:
    app: vue
  type: NodePort
